fixed spacing

--- a/src/App.scss
+++ b/src/App.scss
@@ -156,7 +156,7 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr; 
   gap: 20px; 
-  padding: 20px;
+  padding: 8px;
   margin-bottom: 20px;
 
 
@@ -324,10 +324,9 @@ body {
   flex-direction: column;
   align-items: center; 
   text-align: center;
-  margin-bottom: 15px;
 
   h2 {
-    margin-top: 30px;
+    margin-top: 10px;
     font-size: 3.52778vmin;
     font-style: normal;
     font-weight: bold;
@@ -361,7 +360,7 @@ body {
     margin-bottom: 5px;
     
     .Roles {
-      font-size: 3.175vmin;
+      font-size: 3.52778vmin;
       font-weight: bold;
       margin-bottom: 0px;
       font-style: normal;
